test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_3/src/main.nr

        fn main() -> pub u64 {
            main() + main()
        }
        